--- a/.github/workflows/rm-dev.yml
+++ b/.github/workflows/rm-dev.yml
@@ -1,5 +1,10 @@
 name: Remove Dev
-on: workflow_dispatch
+on: 
+  workflow_dispatch
+    inputs:
+      model_name:
+        required: true
+        description: Model supported by sentence-transformers such as intfloat/e5-large-v2, sentence-transformers/all-MiniLM-L6-v2, sentence-transformers/all-mpnet-base-v2
 
 jobs:
   rm-dev:
@@ -15,4 +20,9 @@ jobs:
       - name: Serverless AWS authentication
         run: sls config credentials --provider aws --key ${{ secrets.AWS_KEY }} --secret ${{ secrets.AWS_SECRET }}
       - name: Remove Lambda functions
-        run: sls remove
+        run: > 
+          SERVICE=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2)
+          MODEL=${{ github.event.inputs.model_name }}
+          MEMORY_SIZE=
+          NORMALIZE_EMBEDDINGS=
+          sls remove
