--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,6 +1,6 @@
 name: Deploy Dev
-on: 
-  workflow_dispatch
+on:
+  workflow_dispatch:
     inputs:
       model_name:
         required: true
@@ -26,7 +26,7 @@ jobs:
       - name: Serverless AWS authentication
         run: sls config credentials --provider aws --key ${{ secrets.AWS_KEY }} --secret ${{ secrets.AWS_SECRET }}
       - name: Deploy Lambda functions
-        run: > 
+        run: >
           SERVICE=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2)
           MODEL=${{ github.event.inputs.model_name }}
           MEMORY_SIZE=${{ github.event.inputs.memory_size }}
