--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,7 +9,7 @@ on:
         required: true
         description: Memory size of the lambda function
       normalize_embeddings:
-        description: Enabled by specify any value, otherwise leave it blank
+        description: Enabled normalize embeddings by specify any value, otherwise leave it blank
 
 jobs:
   deploy-dev:
