--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -34,7 +34,7 @@ jobs:
           sls deploy
       - name: Export Endpoint URL
         run: >
-          echo $(SERVICE=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2) MODEL= MEMORY_SIZE= NORMALIZE_EMBEDDINGS= sls info --verbose | 
+          echo $(SERVICE=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2) MODEL= MEMORY_SIZE=128 NORMALIZE_EMBEDDINGS= sls info --verbose | 
           grep endpoint | 
           sed s/endpoint\:\ //g | 
           awk '{print $1}') > endpoint
