--- a/.github/workflows/rm-dev.yml
+++ b/.github/workflows/rm-dev.yml
@@ -23,6 +23,6 @@ jobs:
         run: >
           SERVICE=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2)
           MODEL=${{ github.event.inputs.model_name }}
-          MEMORY_SIZE=
+          MEMORY_SIZE=128
           NORMALIZE_EMBEDDINGS=
           sls remove
