--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -27,7 +27,7 @@ jobs:
         run: sls config credentials --provider aws --key ${{ secrets.AWS_KEY }} --secret ${{ secrets.AWS_SECRET }}
       - name: Deploy Lambda functions
         run: >
-          SERVICE=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2)
+          SERVICE=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2 | tr '.' '-')
           MODEL=${{ github.event.inputs.model_name }}
           MEMORY_SIZE=${{ github.event.inputs.memory_size }}
           NORMALIZE_EMBEDDINGS=${{ github.event.inputs.normalize_embeddings }}
