chore: updated region to us-east-1

--- a/serverless.yml
+++ b/serverless.yml
@@ -15,7 +15,7 @@ provider:
         buildArgs:
           MODEL: ${env:MODEL}
   stage: dev
-  region: ap-southeast-1
+  region: us-east-1
   iam:
     role:
       statements:
