chore: renamed release.md to RELEASE.md and no extra artifacts need to release in create release workflow

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,5 +14,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "release.tar.gz"
-          bodyFile: "release.md"
+          bodyFile: "RELEASE.md"
