--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -14,6 +14,12 @@ on:
 jobs:
   deploy-dev:
     runs-on: ubuntu-latest
+    env:
+      SERVICE: $(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2 | tr '.' '-')
+      MODEL: ${{ github.event.inputs.model_name }}
+      MEMORY_SIZE: ${{ github.event.inputs.memory_size }}
+      NORMALIZE_EMBEDDINGS: ${{ github.event.inputs.normalize_embeddings }}
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -26,15 +32,10 @@ jobs:
       - name: Serverless AWS authentication
         run: sls config credentials --provider aws --key ${{ secrets.AWS_KEY }} --secret ${{ secrets.AWS_SECRET }}
       - name: Deploy Lambda functions
-        run: >
-          SERVICE=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2 | tr '.' '-')
-          MODEL=${{ github.event.inputs.model_name }}
-          MEMORY_SIZE=${{ github.event.inputs.memory_size }}
-          NORMALIZE_EMBEDDINGS=${{ github.event.inputs.normalize_embeddings }}
-          sls deploy
+        run: sls deploy
       - name: Export Endpoint URL
         run: >
-          echo $(SERVICE=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2) MODEL= MEMORY_SIZE=128 NORMALIZE_EMBEDDINGS= sls info --verbose | 
+          echo $(sls info --verbose | 
           grep endpoint | 
           sed s/endpoint\:\ //g | 
           awk '{print $1}') > endpoint
