feat: gzip compression to web request and response

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -43,4 +43,6 @@ jobs:
       - name: Echo Endpoint URL
         run: echo $(cat endpoint)
       - name: Test Lambda functions
-        run: "curl -X POST -H 'Content-Type: application/json' -d @text.json $(cat endpoint)v1/embeddings"
+        run: |
+          "curl -X POST -H 'Content-Type: application/json' -d @text.json $(cat endpoint)v1/embeddings"
+          "./test.sh $(cat endpoint)v1/embeddings"
