feat: added VERBOSE environment variable to enable/disable verbose logging, disabled by default.

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -10,6 +10,8 @@ on:
         description: Memory size of the lambda function
       normalize_embeddings:
         description: Enabled by default. You can disable it by specify "0" or "False"
+      verbose:
+        description: Enabled verbose logging in the console by specify any value, otherwise leave it blank
 
 jobs:
   deploy-dev:
@@ -18,6 +20,7 @@ jobs:
       MODEL: ${{ github.event.inputs.model_name }}
       MEMORY_SIZE: ${{ github.event.inputs.memory_size }}
       NORMALIZE_EMBEDDINGS: ${{ github.event.inputs.normalize_embeddings }}
+      VERBOSE: ${{ github.event.inputs.verbose }}
 
     steps:
       - name: Checkout repo
