--- a/.github/workflows/rm-dev.yml
+++ b/.github/workflows/rm-dev.yml
@@ -25,4 +25,5 @@ jobs:
           MODEL=${{ github.event.inputs.model_name }}
           MEMORY_SIZE=128
           NORMALIZE_EMBEDDINGS=
+          VERBOSE=
           sls remove
