--- a/.github/workflows/deploy-modal.yml
+++ b/.github/workflows/deploy-modal.yml
@@ -8,7 +8,7 @@ on:
       cpu:
         description: Specify a floating-point number of CPU cores, default to 2.0.
       memory:
-        description: Specify minimum memory size required, default to 2048MB.
+        description: Specify minimum memory size required, default to 2048 MB.
       timeout:
         description: Specify execution timeout, default to 600 seconds.
       keep_warm:
@@ -45,12 +45,15 @@ jobs:
       - name: Install Python packages
         run: pip install modal-client
 
+      - name: Set APP_NAME variable
+        run: |
+          APP_NAME=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2 | tr '.' '-')
+          echo "APP_NAME=${APP_NAME}" >> $GITHUB_ENV
+    
       - name: Deploy FastAPI app
-        run: >
-          STUB=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2 | tr '.' '-')
-          modal deploy open.text.embeddings.server.modal
+        run: modal deploy open.text.embeddings.server.modal
 
       - name: Test FastAPI app
         run: >
-          STUB=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2 | tr '.' '-')
-          echo "https://${{ secrets.MODAL_USERNAME }}--$STUB/v1/embeddings"
+          APP=$(echo "${{ github.event.inputs.model_name }}" | cut -d'/' -f2 | tr '.' '-')
+          echo "https://${{ secrets.MODAL_USERNAME }}--$APP_NAME/v1/embeddings"
