feat: added HOME environment variable for copy download.sh file

--- a/Dockerfile-Modal
+++ b/Dockerfile-Modal
@@ -2,9 +2,7 @@ FROM debian:bullseye-slim AS build-image
 
 #ARG MODEL
 #ENV MODEL=${MODEL}
-RUN pwd;ls -la
-
-COPY ./download.sh ./
+COPY ${HOME}/download.sh ./
 
 # Install build dependencies
 RUN apt-get update && \
